@@ -1,6 +1,6 @@
 /* floatnum.c: Arbitrary precision floating point numbers, based on bc. */
 /*
-    Copyright (C) 2007 Wolf Lammen.
+    Copyright (C) 2007, 2008 Wolf Lammen.
 
     This program is free software; you can redistribute it and/or modify
     it under the terms of the GNU General Public License as published by
